# KvDroid

./: pyproject.toml
kvdroid/jclass/android/graphics/: __init__.py
kvdroid/tools/: font.py  graphics.py  kivytools.py  lang.py  package.py
